<resources>
    <string name="app_name">ShopLasenaServer</string>
    <string name="app_main_name">Lasena water</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appmenuname">Lasena water</string>
    <string name="apptrademark">Mother Nature Gift to man</string>
    <string name="about">Lasena Water’s journey begins in the clouds. As tropical rain falls, it filters through layers of volcanic rock, slowly gathering the natural minerals and electrolytes that give FIJI Water its soft, smooth taste. Unlike with common spring water, FIJI Water collects in a natural artesian aquifer, deep below the Earth’s surface, shielded from external elements by confining layers of rock.Natural pressure forces the water towards the surface, where it’s bottled at the source, untouched by man until you unscrew the cap. The Nature of Water. Earth’s Finest Water. ORDER bottled water delivery today and get the soft, smooth taste of FIJI Water!</string>
    <string name="slogan">Lasena Artesian Natural Mineral water, Mother Nature Gift to man, Direct from nature to you - The best water Nature has provided</string>
    <string name="app_home">Home</string>
    <string name="app_shop">Shop</string>
    <string name="app_extras">Extras</string>
    <string name="app_promos">Promos</string>
    <string name="app_about">About</string>
    <string name="app_cart">Cart</string>
    <string name="app_blog">Blog</string>
    <string name="app_support">Support</string>
    <string name="app_bestSeller" translatable="false">Best Seller</string>
    <string name="app_main_text">mothernature gift to man delivered right to your door</string>
    <string name="app_splash">Splash</string>
    <string name="app_text">lasena logo</string>
    <string name="app_subscribe">Subscribe to save</string>
    <string name="app_learn_more">Learn more</string>
    <string name="app_bottle">Lasena 50cl x 12 bottle</string>
    <string name="button_select">select</string>
    <string name="button_learn_more">Learn more</string>
    <string name="button_share_now">Share now</string>
    <string name="home_text">Everyday, on the go</string>
    <string name="app_50cl_pack">50Cl Pack of 24</string>
    <string name="amount_50cl_pack">#5,000</string>
    <string name="app_size_label">Size</string>
    <string name="app_refer">Refer friends, enjoy a reward</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">0</string>
    <string name="one_thousand">1000</string>
    <string name="ten_thousand">10000</string>
    <string name="hundred_thousand">100000</string>
    <string name="app_invite">Invite friends to take 10% off Lasena water delivery and you will receive 10% reward when they sign up</string>
    <string name="extras_header_text">bottled water delivery: from lasena to your door</string>
    <string name="home_header_text">Welcome to the Water store</string>
    <string name="about_header_text">Discover Mother nature gift to man</string>
    <string name="support_header_text">LASENA Water Help Center</string>
    <string name="app_search">search</string>
    <string name="app_call">call:</string>
    <string name="app_email">email:</string>
    <string name="app_web">webform</string>
    <string name="app_order_now">order now</string>
    <string name="app_orders">Orders</string>
    <string name="app_sign_in">Sign In</string>
    <string name="app_sign_up">Sign Up</string>
    <string name="app_sign_out">Sign Out</string>
    <string name="app_faq">FAQ</string>
    <string name="title_activity_shop">Shop</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="remember_me">Remember me</string>
    <string name="phone_number">Phone Number</string>
    <string name="_08189748178">08189748178</string>
    <string name="sign_in">Sign In</string>
    <string name="select">SELECT</string>
    <string name="upload">UPLOAD</string>
    <string name="title_activity_tracking_order">TrackingOrder</string>
</resources>
