<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@drawable/ic_home"
            android:title="@string/app_home" />

        <item
            android:id="@+id/shop"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/app_shop" />

        <item
            android:id="@+id/extras"
            android:icon="@drawable/ic_control_point_duplicate_black_24dp"
            android:title="@string/app_extras" />

        <item
            android:id="@+id/promos"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/app_promos" />

        <item
            android:id="@+id/blog"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/app_blog" />

        <item
            android:id="@+id/support"
            android:icon="@drawable/ic_headset_mic_black_24dp"
            android:title="@string/app_support" />

        <item
            android:id="@+id/cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/app_cart" />

        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/app_orders" />

        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/app_sign_out" />
    </group>

</menu>
